# guilty

./: .gitignore  AUTHORS  Makefile.am  README  README.mdown  autogen.sh  configure.ac  guilty.1  guilty.in  guilty.py  setup.py
Guilty/: Config.py  GitParser.py  Makefile.am  OutputDevice.py  Parser.py  TextOutputDevice.py  config.py.in  main.py  utils.py
Guilty/OutputDevs/: Makefile.am  __init__.py  csv.py  db.py  xml.py
Guilty/Parser/: Makefile.am  __init__.py  cvs.py  git.py  svn.py
guilty/: Blame.py  Config.py  main.py
guilty/outputdevs/: __init__.py  csv.py  db.py  text.py  xml.py
guilty/parser/: __init__.py  cvs.py  git.py  svn.py
